[gd_scene load_steps=12 format=3 uid="uid://dxev2igc1wpv5"]

[ext_resource type="Script" path="res://Game/Levels/world.gd" id="1_w0lbl"]
[ext_resource type="PackedScene" uid="uid://b3vkmfxunohh8" path="res://Player/player.tscn" id="2_g26gs"]
[ext_resource type="PackedScene" uid="uid://b5y2c1d8ggrbw" path="res://Player/player_camera.tscn" id="3_d2278"]
[ext_resource type="PackedScene" uid="uid://cbmvs6l784pvc" path="res://Game UI/level_completed.tscn" id="4_hx45p"]
[ext_resource type="PackedScene" uid="uid://bx8enf5ix4chl" path="res://Game/Levels/level_tile_map.tscn" id="5_no00p"]
[ext_resource type="PackedScene" uid="uid://peuu5o0yqd0m" path="res://Game UI/Backgrounds/parallax_background.tscn" id="6_kyqab"]
[ext_resource type="PackedScene" uid="uid://cpvcu2li7gjys" path="res://Game UI/game_screen.tscn" id="7_4sh5s"]

[sub_resource type="Animation" id="Animation_rgliv"]
length = 0.001

[sub_resource type="Animation" id="Animation_md5ff"]
resource_name = "countdown"
length = 3.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_pnolj"]
_data = {
"RESET": SubResource("Animation_rgliv"),
"countdown": SubResource("Animation_md5ff")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_15llu"]

[node name="World" type="Node2D"]
script = ExtResource("1_w0lbl")

[node name="Player" parent="." instance=ExtResource("2_g26gs")]

[node name="PlayerCamera" parent="." node_paths=PackedStringArray("player") instance=ExtResource("3_d2278")]
zoom = Vector2(1, 1.135)
editor_draw_limits = true
player = NodePath("../Player")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("4_hx45p")]
visible = false

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.282353)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in: 3"

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 12.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
vertical_alignment = 1

[node name="LevelTileMap" parent="." instance=ExtResource("5_no00p")]
layer_2/name = "Background"
layer_2/z_index = -1
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Foreground"
layer_3/z_index = 1
layer_3/tile_data = PackedInt32Array()

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_pnolj")
}

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource("RectangleShape2D_15llu")

[node name="ParallaxBackground" parent="." instance=ExtResource("6_kyqab")]

[node name="GameScreen" parent="." instance=ExtResource("7_4sh5s")]

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_next_level"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
